Added functionality for menu buttons
Wrote functions to update the cart when buttons in the menu are clicked

--- a/index.css
+++ b/index.css
@@ -86,6 +86,10 @@ h1{
     font-size: 20px;
 }
 
+.title-container{
+    text-align: center;
+}
+
 .item-container{
     display: flex;
     justify-content: space-between;
@@ -109,5 +113,9 @@ h1{
     color: white;
     font-size: 16px;
     font-weight: 700;
+}
+
+.hidden{
+    display: none;
 }
 
